[gd_scene load_steps=3 format=3 uid="uid://wnfaqu4vv6gt"]

[ext_resource type="Script" path="res://common/main_menu.gd" id="1_5rpxc"]
[ext_resource type="PackedScene" uid="uid://dqk3bucs0n7pq" path="res://common/exit_button.tscn" id="2_6odqw"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rpxc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -33.5
offset_right = 100.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NavigationButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="DayButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "View Day Page"
underline = 1

[node name="CreateSampleButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Create sample.txt"

[node name="FetchInputButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Fetch input.txt"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_vertical = 3

[node name="Choices" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
layout_mode = 2

[node name="PartChoices" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons/Choices"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Part 1"
popup/item_0/id = 0
popup/item_1/text = "Part 2"
popup/item_1/id = 1

[node name="InputChoices" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons/Choices"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RunButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Run
"

[node name="CopyAnswerButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/DayButtons"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Copy Answer to Clipboard"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Back
"

[node name="ExitButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_6odqw")]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/DayButtons/CreateSampleButton" to="." method="_on_create_sample_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/DayButtons/FetchInputButton" to="." method="_on_get_input_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/DayButtons/RunButton" to="." method="_on_run_button_button_up"]
[connection signal="button_up" from="PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
